# oxios

./: .clippy.toml  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  DESIGN.md  Dockerfile  EVALUATION_REPORT.md  Justfile  LICENSE  PROGRESS.md  README.md  THIRD-PARTY-NOTICES.md  analysis-concurrency.md  analysis-deps.md  analysis-frontend.md  analysis-markers.md  analysis_advanced.md  analysis_channels_tools.md  analysis_infra.md  audit.toml  benchmark_test.txt  calculation_result.md  channel-analysis.md  cli-analysis.md  code-output.md  context.md  demo.txt  deny.toml  docker-compose.yml  docs-output.md  dumptree.py  error-module-result.md  filecat.py  filetree.py  fileviewer.py  (+35 more)
benchmarks/oxios-bench/: Cargo.toml
benchmarks/oxios-bench/fixtures/: buggy_code.rs  sample_code.rs
benchmarks/oxios-bench/src/: analyzer.rs  cli.rs  collector.rs  config.rs  evaluator.rs  fixture.rs  lib.rs  main.rs  report.rs  suite.rs  task.rs  tasks.rs
benchmarks/oxios-bench/src/eval/: mod.rs
benchmarks/oxios-bench/src/report/: compare.rs  console.rs  json_report.rs  mod.rs
benchmarks/oxios-bench/src/runner/: mod.rs  process_runner.rs
benchmarks/oxios-bench/suites/agent/: a2a-delegate.toml  a2a-query.toml  budget.toml  fork.toml  long-task.toml  persona.toml
benchmarks/oxios-bench/suites/knowledge/: backlink.toml  create.toml  list.toml  read.toml  search.toml
benchmarks/oxios-bench/suites/memory/: cross-session.toml  forget.toml  protect.toml  rapid-write.toml  search.toml  write-verify.toml
benchmarks/oxios-bench/suites/ouroboros/: degraded.toml  eval-pass.toml  exit-code.toml  interview.toml  phase-execute.toml  seed-quality.toml  session-chain.toml  simple.toml
benchmarks/oxios-bench/suites/performance/: json-output.toml  large-response.toml  simple-latency.toml  tool-chain.toml
benchmarks/oxios-bench/suites/regression/: concurrent.toml  empty-prompt.toml  long-prompt.toml  markdown.toml  special-chars.toml  unicode.toml
benchmarks/oxios-bench/suites/security/: allowed-path.toml  audit-trail.toml  credential-isolation.toml  injection.toml  path-sandbox.toml
benchmarks/oxios-bench/suites/skill/: code-review.toml  debug.toml  list.toml  refactor.toml
benchmarks/oxios-bench/suites/tool/: context-file.toml  exec-blocked.toml  exec-shell.toml  file-create.toml  knowledge-crud.toml  knowledge-search.toml  memory-recall.toml  memory-write.toml  space-create.toml  space-list.toml
channels/oxios-cli/: Cargo.toml
channels/oxios-cli/src/: channel.rs  commands.rs  format.rs  interactive.rs  lib.rs  plugin.rs
channels/oxios-telegram/: Cargo.toml
channels/oxios-telegram/src/: format.rs  lib.rs  plugin.rs
channels/oxios-web/: Cargo.toml
channels/oxios-web/frontend/: Cargo.toml
channels/oxios-web/frontend/src/: main.rs
channels/oxios-web/frontend/static/: style.css
channels/oxios-web/src/: api_docs.rs  channel.rs  error.rs  format.rs  lib.rs  middleware.rs  persona_routes.rs  plugin.rs  routes.rs  server.rs
channels/oxios-web/src/routes/: agent_groups.rs  audit_routes.rs  budget_routes.rs  chat.rs  cron_jobs.rs  engine_routes.rs  events.rs  git_routes.rs  infra.rs  knowledge_routes.rs  marketplace.rs  mod.rs  resource_routes.rs  resources.rs  space_routes.rs  system.rs  workspace.rs
channels/oxios-web/static/: Containerfile  default-config.toml  index.html  style.css
channels/oxios-web/web/: .gitignore  biome.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
crates/oxios-calendar/: Cargo.toml
crates/oxios-calendar/src/: alarm.rs  archive.rs  conflict.rs  cron_bridge.rs  engine.rs  ical.rs  index.rs  journal_bridge.rs  lib.rs  rrule.rs  types.rs
crates/oxios-gateway/: Cargo.toml
crates/oxios-gateway/src/: active_web_dist.rs  channel.rs  error_classify.rs  format.rs  gateway.rs  lib.rs  message.rs  meta.rs  plugin.rs  reliability.rs  surface.rs
crates/oxios-gateway/tests/: gateway_test.rs  reliability_metrics.rs
crates/oxios-kernel/: Cargo.toml
crates/oxios-kernel/benches/: state_store.rs
crates/oxios-kernel/share/: default-integrations.toml
crates/oxios-kernel/src/: a2a.rs  a2a_circuit_breaker.rs  access_manager.rs  agent_group.rs  agent_lifecycle.rs  agent_log_db.rs  agent_runtime.rs  argo.rs  audit_persistence.rs  audit_trail.rs  auth.rs  backup.rs  budget.rs  circuit_breaker.rs  config.rs  container.rs  container_manager.rs  context_manager.rs  coordination.rs  credential.rs  cron.rs  daemon.rs  email.rs  embedding.rs  engine.rs  error.rs  event_bus.rs  garden.rs  git_layer.rs  host_exec.rs  host_tools.rs  kernel_handle.rs  knowledge_dream.rs  lib.rs  mcp.rs  memory.rs  metrics.rs  observability.rs  onboarding.rs  orchestrator.rs  (+20 more)
crates/oxios-kernel/tests/: e2e_test.rs  integration_tests.rs  resilience_test.rs
crates/oxios-markdown/: Cargo.toml  LICENSE-THIRD-PARTY
crates/oxios-markdown/src/: backlinks.rs  chat.rs  checklist.rs  fs.rs  fslog.rs  habits.rs  html.rs  i18n.rs  journal.rs  knowledge.rs  lib.rs  merge.rs  parser.rs  plugins.rs  schedule.rs  stats.rs  sync.rs  tgtxt.rs  tokens.rs  types.rs  worker.rs
crates/oxios-mcp/: Cargo.toml
crates/oxios-mcp/src/: client.rs  lib.rs  protocol.rs  validation.rs
crates/oxios-memory/: Cargo.toml
crates/oxios-memory/src/: lib.rs
crates/oxios-ouroboros/: Cargo.toml
crates/oxios-ouroboros/src/: assessment.rs  degraded.rs  directive.rs  engine.rs  eval_cache.rs  evaluation.rs  fallback.rs  interview.rs  lateral.rs  lib.rs  model_resolver.rs  ouroboros_engine.rs  prompts.rs  protocol.rs  regression.rs  resilience.rs  seed.rs  types.rs
crates/oxios-ouroboros/tests/: eval_cache_test.rs  mechanical_eval_test.rs  scenario_test.rs  seed_test.rs  types_test.rs
surface/oxios-web/: Cargo.toml
surface/oxios-web/src/: bridge.rs  channel.rs  error.rs  lib.rs  middleware.rs  persona_routes.rs  plugin.rs  server.rs
surface/oxios-web/static/: default-config.toml
surface/oxios-web/web/: .gitignore  DESIGN.md  biome.json  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+1674 files in other folders)
