[package]
name = "oxios"
version = "0.5.0"
edition = "2021"
description = "Oxios Agent OS — Agent Operating System powered by oxi-sdk"
license = "MIT"
repository = "https://github.com/a7garden/oxios"

[workspace]
resolver = "2"
members = [
    "crates/oxios-mcp",
    "crates/oxios-kernel",
    "crates/oxios-markdown",
    "crates/oxios-ouroboros",
    "crates/oxios-gateway",
    "surface/oxios-web",
    "channels/oxios-cli",
    "channels/oxios-telegram",
    "benchmarks/oxios-bench",
]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography / hashing
sha2 = "0.10"
blake3 = "1.8"
hex = "0.4"
getrandom = "0.2"
regex = "1"

# Concurrency
parking_lot = "0.12"

# oxi engine — single dependency for everything (oxi-ai re-exported via oxi-sdk)
oxi-sdk = "0.23.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Archive
zip = "2"

# File system paths
dirs = "6"

# CLI / interactive
inquire = "0.9"
console = "0.15"
clap = { version = "4", features = ["derive"] }
libc = "0.2"

# Temp files
tempfile = "3"

# Once init
once_cell = "1.19"

[features]
default = ["web", "cli", "browser", "sqlite-memory"]
web = ["dep:oxios-web"]
cli = ["dep:oxios-cli"]
telegram = ["dep:oxios-telegram"]
browser = ["oxios-kernel/browser"]
sqlite-memory = ["oxios-kernel/sqlite-memory"]
embedding-gguf = ["oxios-kernel/embedding-gguf"]

[dependencies]
oxios-kernel = { version = "0.5.0", path = "crates/oxios-kernel", default-features = false }
oxios-markdown = { version = "0.5.0", path = "crates/oxios-markdown" }
oxios-ouroboros = { version = "0.5.0", path = "crates/oxios-ouroboros" }
oxios-gateway = { version = "0.5.0", path = "crates/oxios-gateway" }
oxi-sdk = { workspace = true }
oxios-web = { version = "0.5.0", path = "surface/oxios-web", optional = true }
oxios-cli = { version = "0.5.0", path = "channels/oxios-cli", optional = true }
oxios-telegram = { version = "0.5.0", path = "channels/oxios-telegram", optional = true }
hex = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
parking_lot = { workspace = true }
tracing-appender = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
inquire = { workspace = true }
libc = { workspace = true }
console = { workspace = true }
clap_complete = "4"
webbrowser = "1.0"
reqwest = { workspace = true }
zip = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
toml_edit = "0.22"

[dev-dependencies]
oxios-ouroboros = { version = "0.5.0", path = "crates/oxios-ouroboros" }
oxi-sdk = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
mockall = "0.12"
criterion = { version = "0.5", features = ["async"] }

[[bench]]
name = "kernel_bench"
harness = false
