[package]
name = "oxios"
version = "1.4.0"
edition = "2024"
description = "Oxios Agent OS — Agent Operating System powered by oxi-sdk"
license = "MIT"
repository = "https://github.com/a7garden/oxios"
readme = "README.md"
keywords = ["agent", "ai", "os", "automation"]
categories = ["command-line-utilities", "asynchronous"]

# Optimize dev profile: dependencies compile at release speed,
# workspace crates stay in debug mode for fast iteration.
# This dramatically speeds up incremental compiles and linking.
[profile.dev.package."*"]
opt-level = 2

# Release profile: balance between binary size, compile time, and runtime speed.
#   lto            — cross-crate optimization at link time (~15-25% size reduction)
#   codegen-units  — single translation unit for better inlining
#   strip          — remove debug symbols (huge binary size win)
#   panic          — abort (smaller binary; we don't use catch_unwind)
# See docs/production-audit/07-infra/RELEASE-PROFILE.md for trade-off analysis.
[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[workspace]
members = [
    "crates/oxios-mcp",
    "crates/oxios-memory",
    "crates/oxios-calendar",
    "crates/oxios-kernel",
    "crates/oxios-markdown",
    "crates/oxios-ouroboros",
    "crates/oxios-gateway",
    "surface/oxios-web",
    "channels/oxios-cli",
    "channels/oxios-telegram",
    "benchmarks/oxios-bench",
]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography / hashing
sha2 = "0.10"
blake3 = "1.8"
hex = "0.4"
getrandom = "0.2"
regex = "1"

# Concurrency
parking_lot = "0.12"
arc-swap = "1.7"

# oxi engine — single dependency for everything (oxi-ai re-exported via oxi-sdk)
oxi-sdk = "0.35.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# Archive
zip = "2"

# File system paths
# File system paths
dirs = "6"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }

# CLI / interactive
inquire = "0.9"
console = "0.15"
clap = { version = "4", features = ["derive"] }
libc = "0.2"

# Temp files
tempfile = "3"

# Once init
once_cell = "1.19"

[features]
default = ["web", "cli", "browser", "sqlite-memory"]
web = ["dep:oxios-web"]
cli = ["dep:oxios-cli"]
telegram = ["dep:oxios-telegram"]
browser = []
sqlite-memory = ["oxios-kernel/sqlite-memory"]
embedding-gguf = ["oxios-kernel/embedding-gguf"]
otel = ["oxios-kernel/otel", "dep:opentelemetry", "dep:opentelemetry_sdk"]

[dependencies]
oxios-kernel = { version = "1.4.0", path = "crates/oxios-kernel", default-features = false }
oxios-calendar = { version = "1.4.0", path = "crates/oxios-calendar" }
oxios-markdown = { version = "1.4.0", path = "crates/oxios-markdown" }
oxios-ouroboros = { version = "1.4.0", path = "crates/oxios-ouroboros" }
oxios-gateway = { version = "1.4.0", path = "crates/oxios-gateway" }
oxi-sdk = { workspace = true }
oxios-web = { version = "1.4.0", path = "surface/oxios-web", optional = true }
oxios-cli = { version = "1.4.0", path = "channels/oxios-cli", optional = true }
oxios-telegram = { version = "1.4.0", path = "channels/oxios-telegram", optional = true }
hex = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
parking_lot = { workspace = true }
tracing-appender = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
inquire = { workspace = true }
libc = { workspace = true }
console = { workspace = true }
indicatif = "0.17"
futures = { workspace = true }
clap_complete = "4"
webbrowser = "1.0"
reqwest = { workspace = true }
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", optional = true }
zip = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
toml_edit = "0.22"

[dev-dependencies]
oxios-ouroboros = { version = "1.4.0", path = "crates/oxios-ouroboros" }
oxi-sdk = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
mockall = "0.12"

# Patch oxi crates to local version with #[async_trait] on AgentTool trait.
# Same version number (0.32.0), but the trait uses async fn + #[async_trait]
# instead of manual Pin<Box<dyn Future>>.
[patch.crates-io]
oxios-kernel = { path = "crates/oxios-kernel" }
# oxi 0.32.0 published to crates.io — local patches no longer needed.
# Uncomment for local development:
# oxi-ai = { path = "/Volumes/MERCURY/PROJECTS/oxi/oxi-ai" }
# oxi-agent = { path = "/Volumes/MERCURY/PROJECTS/oxi/oxi-agent" }
# oxi-sdk = { path = "/Volumes/MERCURY/PROJECTS/oxi/oxi-sdk" }
