[package]
name = "oxios-bench"
version = "1.1.0"
edition = "2021"
description = "Benchmark system v2 for Oxios Agent OS evaluation"
license = "MIT"
repository = "https://github.com/a7garden/oxios"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async traits
async-trait = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal colors
console = { workspace = true }

# HTTP client (for ProcessRunner and LLM-Judge)
reqwest = { workspace = true }

# Regex for content assertions
regex = "1"

# Futures
futures = { workspace = true }

# Temporary directories for workspace isolation
tempfile = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "oxios-bench"
path = "src/main.rs"
