[package]
name = "oxios-cli"
version = "0.1.2"
edition = "2021"
description = "Interactive CLI channel for Oxios"
license = "MIT"
repository = "https://github.com/a7garden/oxios"

[dependencies]
oxios-gateway = { version = "0.1.2", path = "../../crates/oxios-gateway" }
reedline = "0.38"
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
