[package]
name = "oxios-telegram"
version = "0.1.0"
edition = "2021"
description = "Telegram channel for Oxios Agent OS"
license = "MIT"
repository = "https://github.com/a7garden/oxios"

[dependencies]
oxios-gateway = { version = "0.1.0", path = "../../crates/oxios-gateway" }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
