[package]
name = "oxios-telegram"
version = "1.5.1"
edition = "2024"
description = "Telegram channel for Oxios Agent OS"
license = "MIT"
repository = "https://github.com/a7garden/oxios"

[dependencies]
oxios-gateway = { version = "1.5.1", path = "../../crates/oxios-gateway" }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
