[package]
name = "oxios-web"
version = "0.1.3"
edition = "2021"
description = "Web dashboard channel for Oxios"
license = "MIT"
repository = "https://github.com/a7garden/oxios"
exclude = ["frontend/target/*"]

[dependencies]
oxios-gateway = { version = "0.1.3", path = "../../crates/oxios-gateway" }
oxios-kernel = { version = "0.1.3", path = "../../crates/oxios-kernel", default-features = false }
oxios-ouroboros = { version = "0.1.3", path = "../../crates/oxios-ouroboros" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
