[package]
name = "oxios-calendar"
version = "1.21.0"
edition = "2024"
description = "Oxios calendar: .ics-based event management"
license = "MIT"
repository = "https://github.com/a7garden/oxios"

[dependencies]
oxios-markdown = { version = "1.21.0", path = "../oxios-markdown" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
icalendar = "0.16"
rrule = "0.13"
cron = "0.16"

[dev-dependencies]
tempfile = { workspace = true }
