[package]
name = "oxios-gateway"
version = "0.2.0-alpha"
edition = "2021"
description = "Channel-agnostic message gateway for Oxios"
license = "MIT"

[dependencies]
oxios-kernel = { path = "../oxios-kernel" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
