[package]
name = "oxios-gateway"
version = "1.2.0"
edition = "2021"
description = "Channel-agnostic message gateway for Oxios"
license = "MIT"
repository = "https://github.com/a7garden/oxios"

[dependencies]
oxios-kernel = { version = "1.2.0", path = "../oxios-kernel", default-features = false, features = ["sqlite-memory"] }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
