[package]
name = "oxios-gateway"
version = "1.13.1"
edition = "2024"
description = "Channel-agnostic message gateway for Oxios"
license = "MIT"
repository = "https://github.com/a7garden/oxios"

[dependencies]
oxios-kernel = { version = "1.13.1", path = "../oxios-kernel", default-features = false, features = ["sqlite-memory"] }
oxios-ouroboros = { version = "1.13.1", path = "../oxios-ouroboros" }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
