[package]
name = "oxios-kernel"
version = "0.1.3"
edition = "2021"
description = "Oxios kernel: supervisor, event bus, state store"
license = "MIT"
repository = "https://github.com/a7garden/oxios"

[features]
default = ["browser"]
otel = ["tracing-opentelemetry", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "opentelemetry-stdout"]
wasm-sandbox = ["dep:wasmtime", "dep:wasmtime-wasi"]
browser = []

[dependencies]
oxios-ouroboros = { version = "0.1.3", path = "../oxios-ouroboros" }
oxi-sdk = { workspace = true }
oxi-ai = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
cron = "0.16"

regex = { workspace = true }
gix = { version = "0.83", features = ["tree-editor"] }
toml = { workspace = true }
glob = "0.3"
tempfile = "3"
# reqwest removed — unused in kernel crate
sha2 = { workspace = true }
hex = { workspace = true }
getrandom = { workspace = true }
once_cell = "1.19"
blake3 = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }

# WASM sandbox (optional)
wasmtime = { version = "22", features = ["cranelift"], optional = true }
wasmtime-wasi = { version = "22", optional = true }
sysinfo = "0.35"
dirs = "6"
libc = "0.2"
lru = "0.10"
inquire = "0.9"
console = "0.15"

# Vector search (HNSW)
usearch = "2.25"

# Headless browser (built-in)
oxibrowser-core = "0.9.1"

# OpenTelemetry (optional)
tracing-opentelemetry = { version = "0.28", optional = true }
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", optional = true }
opentelemetry-stdout = { version = "0.27", optional = true }

[dev-dependencies]
tempfile = "3"
oxios-ouroboros = { version = "0.1.3", path = "../oxios-ouroboros" }
oxios-gateway = { path = "../oxios-gateway" }
async-trait = { workspace = true }
