[package]
name = "oxios-kernel"
version = "1.0.2"
edition = "2021"
description = "Oxios kernel: supervisor, event bus, state store"
license = "MIT"
repository = "https://github.com/a7garden/oxios"

[features]
default = ["sqlite-memory"]
otel = ["tracing-opentelemetry", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "opentelemetry-stdout"]
wasm-sandbox = ["dep:wasmtime", "dep:wasmtime-wasi"]
native-browser = ["oxi-sdk/native-browser"]
sqlite-memory = ["dep:rusqlite", "dep:sqlite-vec"]

# `embedding-gguf` feature lives on `oxios-memory` (RFC-018 b.2). Re-declared
# here so the kernel can gate `#[cfg(feature = "embedding-gguf")]` blocks.
# Activating this feature enables the corresponding feature on the dep.
embedding-gguf = ["oxios-memory/embedding-gguf"]

# `embedding-gguf` feature moved to `oxios-memory` in RFC-018 b.2.
# The root `oxios` binary and other workspace crates can gate on
# `oxios-memory/embedding-gguf` directly (no passthrough needed).

[dependencies]
oxios-memory = { version = "1.0.2", path = "../oxios-memory" }
oxios-ouroboros = { version = "1.0.2", path = "../oxios-ouroboros" }
oxios-markdown = { version = "1.0.2", path = "../oxios-markdown" }
oxios-mcp = { version = "1.0.2", path = "../oxios-mcp" }
oxi-sdk = { workspace = true }
# oxi-ai no longer needed directly — all types re-exported via oxi-sdk
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
cron = "0.16"

regex = { workspace = true }
gix = { version = "0.83", features = ["tree-editor", "blob-diff"] }
similar = "2"
toml = { workspace = true }
glob = "0.3"
tempfile = { workspace = true }
# HTTP client for ClawHub API
reqwest = { workspace = true }
# ZIP extraction for ClawHub skill archives
zip = { workspace = true }
# URL parsing
url = "2.5"
sha2 = { workspace = true }
hex = { workspace = true }
getrandom = { workspace = true }
once_cell = { workspace = true }
blake3 = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }

# WASM sandbox (optional)
wasmtime = { version = "22", features = ["cranelift"], optional = true }
wasmtime-wasi = { version = "22", optional = true }
sysinfo = "0.35"
dirs = { workspace = true }
libc = { workspace = true }
lru = "0.10"
inquire = { workspace = true }
console = { workspace = true }
indicatif = "0.17"

# Vector search (HNSW, legacy)
usearch = "2.25"

# SQLite-based memory storage (RFC-012)
rusqlite = { version = "0.34", features = ["bundled"], optional = true }
sqlite-vec = { version = "0.1", optional = true }

# `llama-gguf` and `hf-hub` moved to `oxios-memory` in RFC-018 b.2.


# OpenTelemetry (optional)
tracing-opentelemetry = { version = "0.28", optional = true }
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", optional = true }
opentelemetry-stdout = { version = "0.27", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
oxios-ouroboros = { version = "1.0.2", path = "../oxios-ouroboros" }
oxios-gateway = { path = "../oxios-gateway" }
async-trait = { workspace = true }
criterion = { version = "0.5", features = ["async"] }
