[package]
name = "oxios-markdown"
version = "1.7.0"
edition = "2024"
license = "MIT"
description = "Markdown knowledge management — ported from files.md by Artem Zakirullin"
repository = "https://github.com/a7garden/oxios"
keywords = ["markdown", "knowledge", "notes"]
categories = ["text-processing"]

[dependencies]
tokio = { workspace = true, features = ["fs", "sync", "rt"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = "0.9"
parking_lot = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }
regex = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
md-5 = "0.10"
filetime = "0.2"
walkdir = "2"
unicode-segmentation = "1"
unicode-normalization = "0.1"
percent-encoding = "2"
rand = "0.8"
once_cell = "1"

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
