[package]
name = "oxios-mcp"
version = "0.4.0"
edition = "2021"
description = "Model Context Protocol client — JSON-RPC 2.0 over stdio"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
