[package]
name = "oxios-mcp"
version = "1.2.0"
edition = "2021"
description = "Model Context Protocol client — JSON-RPC 2.0 over stdio"
license = "MIT"
repository = "https://github.com/a7garden/oxios"
keywords = ["mcp", "json-rpc", "ai"]
categories = ["network-programming"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
