[package]
name = "oxios-memory"
version = "1.2.0"
edition = "2021"
description = "Tiered agent memory — extracted from oxios-kernel per RFC-018"
license = "MIT"

[features]
default = []
sqlite-memory = ["dep:rusqlite", "dep:sqlite-vec"]
embedding-gguf = ["dep:llama-gguf", "dep:hf-hub"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
lru = "0.10"
usearch = "2.25"

# Optional: SQLite backend
rusqlite = { version = "0.34", features = ["bundled"], optional = true }
sqlite-vec = { version = "0.1", optional = true }

# Optional: GGUF embedding (Apple Silicon)
[target.'cfg(target_arch = "aarch64")'.dependencies]
llama-gguf = { version = "0.14", optional = true, features = ["cpu", "huggingface"] }
hf-hub = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
