[package]
name = "oxios-ouroboros"
version = "0.1.0"
edition = "2021"
description = "Ouroboros spec-first protocol for Oxios"
license = "MIT"
repository = "https://github.com/a7garden/oxios"

[dependencies]
oxi-sdk = "0.15.2"
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
