[package]
name = "oxios-ouroboros"
version = "1.24.1"
edition = "2024"
description = "Ouroboros spec-first protocol for Oxios"
license = "MIT"
repository = "https://github.com/a7garden/oxios"

# The unified intent-handling protocol concept (assess → crystallize → execute → review)
# and ambiguity scoring model are derived from the Ouroboros project by Q00.
# See THIRD-PARTY-NOTICES.md for full attribution.
# Original: https://github.com/Q00/ouroboros (MIT License, Copyright (c) 2025 Q00)

[dependencies]
oxi-sdk = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
oxi-sdk = { workspace = true }
proptest = { workspace = true }
